--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node2022q4",
+  "name": "crud-api",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Lizaveta01/Node2022Q4.git"
+    "url": "git+https://github.com/Lizaveta01/crud-api.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Lizaveta01/Node2022Q4/issues"
+    "url": "https://github.com/Lizaveta01/crud-api/issues"
   },
-  "homepage": "https://github.com/Lizaveta01/Node2022Q4#readme",
+  "homepage": "https://github.com/Lizaveta01/crud-api#readme",
   "dependencies": {
     "@types/node": "^18.11.15",
     "cross-env": "^7.0.3",
