--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start:dev": "npx nodemon src/index.ts",
+    "start:dev": "npx tsx src/index.ts",
     "start:prod": "cross-env NODE_ENV=production webpack && node ./dist/bundle.js",
     "start:multi": "cross-env NODE_ENV=development CLUSTER=ON webpack && node ./dist/bundle.js",
     "test": "jest --detectOpenHandles"
@@ -36,6 +36,7 @@
     "supertest": "^6.3.3",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
+    "tsx": "^4.19.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
